# optimus

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  __main__.py  burst_absorption.py  harness.py  index_scaling.py
benchmarks/load/: __init__.py  __main__.py  fakes.py  report.py  runner.py
benchmarks/soak/: __init__.py  __main__.py  driver.py  images.py  metrics.py
docs/: README.md  architecture.md  capacity.md  detection-eval.md  operations.md  performance-notes.md  privacy-policy-template.md  scaling.md  security-audit.md  sharding.md  simple-mode.md
docs/eval/: baseline.md  detection-eval-report.json  detection-eval-report.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_rls_multitenant.py  0003_global_submitters.py  0004_flip_mirror_hashes.py  0005_retention_created_at_indexes.py
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: optimus-overview.json
monitoring/grafana/provisioning/dashboards/: optimus.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: eval.py  make_fixtures.py  register_commands.py
src/optimus/: __init__.py  __main__.py
src/optimus/app/: __init__.py  discord.py  memory.py  migrate.py  simple.py  startup.py
src/optimus/bus/: __init__.py  inprocess.py  nats.py
src/optimus/contracts/: events.py
src/optimus/core/: backoff.py  circuit.py  config.py  guild_config.py  health.py  idempotency.py  logging.py  ratelimit.py  readiness.py
src/optimus/db/: engine.py  models.py  repositories.py
src/optimus/evidence/: __init__.py  store.py
src/optimus/globaldb/: __init__.py  promotion.py  service.py  signing.py
src/optimus/hashing/: bktree.py  decoder.py  embedding.py  ensemble.py  mih.py  perceptual.py
src/optimus/i18n/: __init__.py  catalog.py
src/optimus/i18n/locales/: en.json  sr.json
src/optimus/services/: __init__.py
src/optimus/services/detection/: __init__.py  __main__.py  index.py  matcher.py  service.py  swarm.py  worker.py
src/optimus/services/gateway/: __init__.py  __main__.py  bot.py  extract.py
src/optimus/services/ingest/: service.py  worker.py
src/optimus/services/interactions/: __init__.py  __main__.py  commands.py  components.py  handlers.py  logic.py  service.py
src/optimus/services/moderation/: __init__.py  __main__.py  actions.py  boundaries.py  cooldown.py  coordinator.py  policy.py  priority.py  review.py  safemode.py  service.py
src/optimus/services/scheduler/: __init__.py  __main__.py  service.py  tasks.py
tests/: conftest.py
tests/fixtures/: labels.json
tests/integration/: _harness.py  test_fetcher.py  test_index_manager.py  test_pipeline.py  test_scheduler.py  test_simple_mode.py
tests/unit/: test_bktree.py  test_boundaries.py  test_bus.py  test_config_and_health.py  test_contracts.py  test_coordinator.py  test_core.py  test_decoder.py  test_detection.py  test_embedding.py  test_engine_pool.py  test_ensemble.py  test_eval_harness.py  test_evidence.py  test_flip_indexing.py  test_gateway.py  test_gateway_guild_joined.py  test_globaldb_promotion.py  test_globaldb_service.py  test_globaldb_signing.py  test_i18n.py  test_index_equivalence.py  test_ingest_worker.py  test_inprocess_bus.py  test_interactions_handlers.py  test_interactions_logic.py  test_load_harness.py  test_logging.py  test_main.py  test_memory_store.py  test_mih.py  test_moderation_actions.py  test_moderation_priority.py  test_moderation_service.py  test_monitoring_config.py  test_perceptual.py  test_policy.py  test_readiness.py  test_repositories.py  test_review.py  (+7 more)
