[project]
name = "optimus"
version = "0.1.0"
description = "Discord moderation bot for detecting and removing scam/phishing images in near-real-time."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "optimus contributors" }]
dependencies = [
    "hikari>=2.0.0.dev122",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "nats-py>=2.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pillow>=10.3",
    "numpy>=1.26",
    "PyWavelets>=1.6",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "pynacl>=1.5",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
embedding = ["onnxruntime>=1.17"]
evidence = ["aioboto3>=12.3"]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "aiosqlite>=0.20",
    "fakeredis>=2.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/optimus"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B011"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/optimus"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pywt.*", "onnxruntime.*", "nats", "nats.*", "PIL.*", "aioboto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/optimus"]
branch = true
