[project]
name = "optimus"
version = "0.1.0"
description = "Discord moderation bot for detecting and removing scam/phishing images in near-real-time."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "optimus contributors" }]
dependencies = [
    "hikari>=2.5.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "redis>=8.0.0",
    "nats-py>=2.15.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "numpy>=2.4.6",
    "PyWavelets>=1.9.0",
    "structlog>=26.1.0",
    "prometheus-client>=0.25.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pynacl>=1.6.2",
    "aiohttp>=3.14.1",
]

[project.optional-dependencies]
embedding = ["onnxruntime>=1.26.0"]
evidence = ["aioboto3>=15.5.0"]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.155.2",
    "aiosqlite>=0.22.1",
    "fakeredis>=2.36.1",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/optimus"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B011"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/optimus", "benchmarks"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pywt.*", "onnxruntime.*", "nats", "nats.*", "PIL.*", "aioboto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/optimus"]
branch = true
